<resources>
    <string name="app_name">Foursquare</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Login">Login</string>

    <string name="we_have_sent_you_an_otp">We have sent you an OTP.</string>
    <string name="please_enter_it_below">Please enter it below.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="get_in">Get in !</string>
    <string name="submit">Submit</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="res_address">Daffodils,Laxmindra Nagar,2nd cross Udupi</string>
    <string name="res_phno">+91 9900880123</string>
    <string name="drive">Drive:</string>
    <string name="distance">5</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="about_us">Lorem Ipsum is simply dummy text of printing and typesetting Industry.
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown
        printer took a galery of type and scrambled it to make a specimen book. It has survived not
        only five centuries , but also the leap into electronic typesetting, remaining essentially
        unchanged. It was popularized in the 1960s with the release of letraset sheets containing
        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker
        including versions of Lorem Ipsum. </string>
    <string name="about_usptwo">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the Industry</string>
    <string name="open">Drawer open</string>
    <string name="close">Drawer close</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_fav">Favourite</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="amount">$$$$</string>
    <string name="dot">•</string>
</resources>