<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.ForgotpasswordFragment">

    <!-- TODO: Update blank fragment layout -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="105dp"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_centerHorizontal="true"
            android:text="@string/we_have_sent_you_an_otp"
            android:layout_marginTop="213dp"
            android:textColor="#E8E6E6"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_centerHorizontal="true"
            android:text="@string/please_enter_it_below"
            android:layout_marginTop="253dp"
            android:textColor="#E8E6E6"
            android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_otp"
        android:layout_marginTop="330dp"
        android:textColor="#A6A0A0"
        android:textSize="19sp"/>

    <EditText
        android:id="@+id/otp_value"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#A6A0A0"
        android:textColor="@color/white"
        android:layout_marginTop="360dp"
        tools:ignore="Autofill,LabelFor"
        android:inputType="number" />

    <TextView
        android:id="@+id/resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_centerHorizontal="true"
        android:text="@string/resend_otp"
        android:layout_marginTop="430dp"
        android:textColor="#A6A0A0"
        android:clickable="true"
        android:textSize="19sp"
        android:focusable="true"/>

    <Button
        android:id="@+id/get_in"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/get_in"
        android:textColor="#D1CDCD"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:backgroundTint="@android:color/transparent"
        android:background="@drawable/forgotpwdesign"
        android:layout_marginTop="500dp"/>

</RelativeLayout>