<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ScrollViewCount">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/rest_img"
        android:layout_width="match_parent"
        android:layout_height="350dp"/>

    <!--<include
        layout="@layout/detailscreen_toolbar"/>-->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Foursquare.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/detailscreen_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:navigationIcon="@drawable/back_icon"
            app:menu="@menu/detscreen_menu">

            <TextView
                android:id="@+id/detscreentoolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="Attil"
                android:fontFamily="@font/avenir_medium"
                android:textSize="24sp"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/res_name"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="heollo this is walter white"
        android:layout_marginTop="230dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:textSize="23sp"
        android:fontFamily="@font/avenir_book"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/show_rating"
        android:numStars="5"
        android:stepSize="0.5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="290dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="355dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <ImageView
                android:onClick="ShowPopup"
                android:layout_marginStart="70dp"
                android:id="@+id/give_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rating_icon"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_marginStart="65dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rating"
                android:textSize="19sp"
                android:fontFamily="@font/avenir_book"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_marginStart="70dp"
                android:id="@+id/check_photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/photos_icon"/>

            <TextView
                android:layout_marginStart="62dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Photos"
                android:textSize="19sp"
                android:fontFamily="@font/avenir_book"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_marginStart="70dp"
                android:id="@+id/check_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/review_icon"/>

            <TextView
                android:layout_marginStart="62dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Review"
                android:textSize="19sp"
                android:fontFamily="@font/avenir_book"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#3E3E3E"
        android:layout_marginTop="450dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Overview"
        android:textColor="#351047"
        android:textSize="25sp"
        android:layout_marginTop="470dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:id="@+id/res_info"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="520dp"
        android:fontFamily="@font/avenir_book"/>
    
    <ImageView
        android:id="@+id/reslocn_img"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginTop="690dp"
        android:fontFamily="@font/avenir_book"/>

    <TextView
        android:id="@+id/res_address"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="720dp"
        android:textColor="#000000"
        android:text="@string/res_address"
        android:fontFamily="@font/avenir_medium"/>

    <TextView
        android:id="@+id/res_phno"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="775dp"
        android:textColor="#000000"
        android:text="@string/res_phno"/>

    <TextView
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="805dp"
        android:textColor="#000000"
        android:text="@string/drive"
        android:fontFamily="@font/avenir_medium"/>

    <TextView
        android:id="@+id/res_dis"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="805dp"
        android:textColor="#000000"
        android:text="@string/distance"
        android:fontFamily="@font/avenir_medium"/>

    <Button
        android:id="@+id/add_review"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/reslocn_img"
        android:text="Add Review"
        android:textSize="21sp"
        android:textAllCaps="false"
        android:textColor="#F7F7F7"
        android:backgroundTint="#351347"
        android:fontFamily="@font/avenir_medium"/>

</RelativeLayout>

</ScrollView>